gatewayClass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: fixitapp-gateway-class
spec:
  controllerName: projectcontour.io/gateway-controller
