deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fixitapp-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fixitapp-api
  template:
    metadata:
      labels:
        app: fixitapp-api
    spec:
      containers:
      - name: fixitapp
        image: rusteniojr/fixit:main          
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi
