prometheus-grafana-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: prometheus
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 9090
      nodePort: 30092
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: grafana
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3000
      nodePort: 30301
