service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fixitapp-api-service
spec:
  type: NodePort
  selector:
    app: fixitapp-api
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
      nodePort: 30081


---
apiVersion: v1
kind: Service
metadata:
  name: fixitapp-postgres
spec:
  type: NodePort
  selector:
    app: fixitapp-postgres
  ports:
  - protocol: TCP
    port: 5435
    targetPort: 5435
    nodePort: 30035
