httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: fixitapp-route
  namespace: default
spec:
  parentRefs:
  - name: fixitapp-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: fixitapp-api-service
      port: 8080
